[tool.poetry]
name = "song2txt"
version = "0.1.0"
description = "Command-line utility to make a .txt ultrastar file from a song"
authors = ["dipzza <dipzza@disroot.org>"]
license = "AGPLv3"

[tool.poetry.dependencies]
python = "^3.10"

[tool.poetry.dev-dependencies]
pytest = "^7.1.2"
pytest-cov = "^3.0.0"
wemake-python-styleguide = "^0.16.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
