[tool.poetry]
name = "song2txt"
version = "0.1.0"
description = "Tools to make a .txt ultrastar file from a song"
authors = ["dipzza <dipzza@disroot.org>"]
license = "AGPLv3"

[tool.poetry.dependencies]
python = ">=3.7, <3.11"
charset-normalizer = "^2.1.0"
crepe = "^0.0.12"
pydub = "^0.25.1"
tensorflow = "^2.9.1"

[tool.poetry.dev-dependencies]
pytest = "^7.1.2"
pytest-cov = "^3.0.0"
flake8 = "^4.0.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
uspitch = 'song2txt.pitch_cli:main'
